--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,1001 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,400&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,400&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400&display=swap");
+
+html{
+  scroll-behavior: smooth;
+  /* width: 100%; */
+  /* overflow-x: hidden; */
+  /* margin: 0px; */
+  /* padding: 0px; */
+}
+
+@media only screen and (max-width: 1380px){
+html {
+    font-size: 14px;
+}
+}
+
 body {
   margin: 0;
+  height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-tap-highlight-color: transparent;
+  overflow-x: hidden;
+  position: relative;
+  /* width: 100%; */
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+a.nav-link{
+  
+  /* text-decoration: none; */
+  color: #47312d;
+  text-decoration: none;
+  font-family: "Poppins", sans-serif;
+  font-weight:600;
+  font-size: 20px;
+  
+
+}
+
+.navbar1{
+  position: fixed;
+  top: 0px;
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  height: 64px;
+  width: 100vw;
+  background-color: rgba(255, 255, 255, .15);  
+  backdrop-filter: blur(5px);
+  box-shadow: rgb(0 0 0 / 5%) 0px 5px 10px;
+  z-index: 1;
+}
+
+.nav-container{
+  display:flex;
+  margin:auto;
+  width:92.5%;
+  justify-content: space-between;
+  align-items: center;
+  /* background-color: plum; */
+
+}
+
+.profile{
+  border-radius: 50%;
+  height: 40px;
+  width: 40px;
+  border:solid 3px #38a3a5;
+}
+
+.profile-container{
+  display: flex;
+  align-items: center;
+  gap:0.75rem;
+  font-family: "Poppins", sans-serif;
+  font-style: bold;
+  font-weight:800;
+  font-size: 2rem;
+  white-space: nowrap;
+  
+
+}
+
+.details-tabs{
+  display: flex;
+  list-style-type: none;
+  gap: 10px;
+  align-items: center;
+}
+
+.details-tabs > li{
+  padding-left: 0.75rem;
+  padding-right: 00.75rem;
+}
+
+.toggle-button{
+  position: absolute;
+  right: 1rem;
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width:25px;
+  height: 18px;
+  background-color: edf2f4;
+  padding: 7px;
+  border-radius: 2px;
+  align-items: center;
+}
+
+.toggle-button .bar1{
+    height:3px;
+    background-color: #ef476f;
+    width:20px;
+    border-radius: 15px;
+}
+
+.toggle-button .bar2{
+  height:3px;
+  background-color: #38a3a5;
+  width:20px;
+  border-radius: 15px;
+}
+
+.toggle-button .bar3{
+  height:3px;
+  background-color: #ffd166;
+  width:20px;
+  border-radius: 15px;
+}
+
+
+
+.menu{
+  margin-top: 45px;
+  background-color: #ffd166;
+  display: none;
+  text-align: left;
+  transition: 0.5s;
+  overflow: hidden;
+  position: relative;
+  z-index: 10;
+}
+
+.menu > ul{
+  list-style-type: none;
+  padding-left: 20px;
+  font-size: 1.4rem;
+  line-height: 2.4rem;
+  
+}
+
+
+@media (max-width:780px){
+          .toggle-button{
+            display: flex;
+          }
+
+          .details-tabs{
+            display: none;
+          }
+
+          .nav-container{
+            margin-left: 20px;
+          }
+
+          .menu{
+            display:flex;
+          }
+}
+
+.pink{
+     color:#ef476f;
+
+}
+
+.orange{
+    
+    color:#38a3a5;
+}
+
+.green{
+    color:#ffd166;
+}
+
+.main{
+  display: flex;
+  /* background-color: #38a3a5; */
+  align-items: center;
+  justify-content: center;
+
+  
+}
+
+.overlay {
+  height: 0%;
+  width: 100%;
+  position: fixed;
+  z-index: 3;
+  top: 0;
+  left: 0;
+  background-color: #ff85a2;
+  overflow-x: hidden;
+  transition: 0.3s;
+}
+
+.overLay2{
+  height: 0%;
+  width: 100%;
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  background-color: #38a3a5;
+  overflow-x: hidden;
+  transition: 0.3s;
+}
+
+.overLay1{
+  height: 0%;
+  width: 100%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #ffd166;
+  overflow-x: hidden;
+  transition: 0.3s;
+}
+
+.overlay a {
+  padding: 8px;
+  text-decoration: none;
+  padding: 0px;
+  color: #303030;
+  display: block;
+  transition: 0.3s;
+  
+}
+
+
+
+.overlay a:hover, .overlay a:focus {
+  color: #f1f1f1;
+}
+
+.overlay .closebtn {
+  position: absolute;
+  top: 5px;
+  right: 15px;
+  font-size: 50px;
+  
+}
+
+.overlay-content {
+
+  position: relative;
+  top: 15%;
+  width: 100%;
+  text-align: left;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight:700;
+  font-size: 3rem;
+  margin-left: 10px;
+  /* margin-top: 30px; */
+}
+
+.circle{
+  position: absolute;
+  width:45rem;
+  height: 45rem;
+  border-radius: 50%;
+  background-color: #f8f0f3;
+  top:50%;
+  left:50%;
+  transform-origin: center;
+  z-index: -1;
+  transform: translate(-50%, -50%) scale(1) !important;
+  transition: 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+  
+  /* margin-left: -368px; */
+
+
+
+}
+
+@media only screen and (max-width:800px)
+{
+      .circle{
+        width:30rem;
+        height: 30rem;
+      }
+      
+}
+
+.content{
+  width:100%;
+  height: 100vh;
+  padding: 0 4rem;
+  position: relative;
+  z-index: 0;
+
+}
+
+.m_header{
+  display: flex;
+  /* flex-direction: row; */
+  position: relative;
+}
+
+.s_box i{
+  color: #ef476f;
+  font-size: 1.4rem;
+}
+
+.line{
+    width: 28em;
+    height: 5px;
+    border-radius: 8px;
+    /* background: -webkit-gradient(linear, left top, right top, from(#f36393), color-stop(33.33%, #f36393), color-stop(33.33%, #5c59ac), color-stop(66.66%, #5c59ac), color-stop(66.66%, #ffab73), to(#ffab73)); */
+    background: linear-gradient(90deg, #ef476f 0%, #ef476f 33.33%, #38a3a5 33.33%, #38a3a5 66.66%, #ffd166 66.66%, #ffd166 100%);
+}
+
+.info{
+  height: 100vh;
+  width:50%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  position: relative;
+  margin-left: 4rem;
+}
+
+@media only screen and (max-width:800px){
+    .info{
+      margin-left: 2rem;
+      width: 100%;
+    }
+}
+
+.s_right{
+  height: 100vh;
+  width:50%;
+  position:relative;
+  margin-right: 4rem;
+ 
+  /* background-color: #303030; */
+}
+
+@media only screen and (max-width:800px){
+  .s_right{
+    display: none;
+    margin-right: 2rem;
+  }
+}
+
+
+.s_box{
+  position: absolute;
+  top: 45%;
+  left: 65%;
+  width: 28rem;
+  transform: rotate(-90deg) translate(0%, -50%);
+}
+
+
+
+.item_list{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.items{
+  transform: rotate(90deg);
+  padding: 1rem 1rem;
+}
+
+.wrapper .mainHeading{
+  display: inline-block;
+  overflow: hidden;
+}
+
+
+.mainHeading{
+  display: flex;
+  flex-direction: column;
+  font-size: 5rem;
+  font-family: "Poppins", sans-serif;
+  transition: 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+  color: #47312d;
+  text-align: left;
+  
+}
+
+@media only screen and (max-width: 600px){
+html {
+    font-size: 12px;
+}
+}
+
+.namewrap{
+  font-weight: 800;
+}
+
+.subhead{
+  font-size: 3rem;
+  font-weight: 300;
+}
+
+.projbut{
+  position: relative;
+  width:158px;
+  height:42px;
+  border-radius: 10px;
+  border:none;
+  box-shadow: 0 5px 5px rgb(1 1 1 / 10%);
+  cursor: pointer;
+  font-weight: 600;
+  font-size: 1.1rem;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  z-index: 0;
+  color: #47312d;
+  text-decoration: none;
+  transition: 0.1s;
+}
+
+
+
+
+.fline{
+  height: 42px;
+  width:20px;
+  left:0;
+  border-radius: 10px;
+  position: absolute;
+  transition:0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  
+  z-index: -1;
+  
+  background-color: #ef476f;
+}
+.sline{
+  width: 27px;
+  height:42px;
+  left:0;
+  z-index: -2;
+  position: absolute;
+  border-radius: 10px;
+  transition: 0.6s cubic-bezier(0.165, 0.84, 0.44, 1) 0.15s;
+  
+  background-color:#38a3a5;
+}
+
+.tline{
+  width: 32px;
+  height:42px;
+  left:0;
+  z-index: -3;
+  position: absolute;
+  border-radius: 10px;
+  transition: 0.6s cubic-bezier(0.165, 0.84, 0.44, 1) 0.3s;
+  background-color:#ffd166;
+  overflow: hidden;
+}
+
+.projbut:hover{
+  color:white;
+}
+
+.projbut:hover > span {
+  transform: scale(30);
+  
+  
+}
+
+.projbut > span{
+ /* transition-delay: calc((var(--n) - 1) * 0.1s);  */
+
+}
+
+.projbut > span:nth-child(1) {
+  --n: 1;
+}
+
+.projbut > span:nth-child(2) {
+  --n: 2;
+}
+
+.projbut > span:nth-child(3) {
+  --n: 3;
+}
+
+
+.photo{
+  border-radius: 50%;
+  height: 26em;
+  width: 26em;
+  border:solid 3px #38a3a5;
+  /* position: absolute; */
+  
+  background-size: cover;
+}
+
+.aboutMe{
+  
+  position: relative;
+  display:flex;
+  min-height: 95vh;
+  height: auto;
+  align-items: center;
+  padding: 0 4rem;
+
+
+}
+
+@media only screen and (max-width:800px){
+  .aboutMe{
+    flex-direction: column-reverse;
+    justify-content:start;
+    align-items: center;
+  }
+}
+
+.aboutMet{
+  width:50%;
+  height: 100%;
+  font-size: 2rem;
+  text-indent: 0%;
+  text-align:start;
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+}
+
+@media only screen and (max-width:800px){
+  .aboutMet{
+    font-size: 1.3rem;
+    width: 100%;
+    margin-top: 2.5em;
+  }
+}
+
+.pro_pic{
+
+  width: 50%;
+  height: 100%;
+    
+  
+}
+
+@media only screen and (max-width: 800px){
+.aboutMrt .pro_pic {
+    width: 100%;
+    height: 50%;
+    /* margin-top: 1em; */
+    
+}
+}
+
+@media only screen and (max-width: 800px){
+.pro_pic {
+  width: auto;
+  overflow: auto;
+  margin-top: 0px;
+  
+  }
+}
+
+@media only screen and (max-width: 800px){
+.photo {
+      width: 18em;
+      height: 18em;
+      margin-top: 2.5em;
+      
+  }
+}
+
+/* ----------------------------------------Skills------------------------------------------------------ */
+.skills{
+  position: relative;
+  /* display:flex; */
+  min-height: 80vh;
+  text-align: left;
+  padding: 0 4rem;
+  /* width: 100%; */
+}
+
+@media only screen and (max-width: 800px){
+  .skills {
+       
+        padding: 0 2rem;
+    }
+  }
+
+.sheading{
+    font-size: 3rem;
+    font-weight: 800;
+    font-family: "Poppins", sans-serif;
+}
+
+.sitem > img{
+  height: 10em;
+  width: auto;
+}
+
+.sitem > .Javal{
+  height: 8em;
+  width: auto;
+}
+
+.sitem > .text{
+  font-size: 1.5rem;
+}
+
+.sitem{
+  width:15em;
+  height:20em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-family: "Montserrat", sans-serif;
+
+}
+
+@media only screen and (max-width: 800px){
+  .sitem {
+        width:12em;
+        height: 16em;
+    }
+}
+
+.scontent{
+  width:100%;
+  display: flex;
+  align-items: stretch;
+  position: relative;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+@media only screen and (max-width: 800px){
+  .scontent {
+        justify-content: space-evenly;
+        flex-direction: row;
+        
+    }
+}
+
+.reat{
+
+  width:auto !important;
+  height:8em !important;
+  margin-top: 10px;
+}
+
+.sitem > .tdown{
+  font-size: 1.4rem;
+  padding-top: 15px;
+}
+
+
+/* ---------------------------------------------Projects---------------------------------------------------------- */
+
+.projects{
+  position: relative;
+  /* display:flex; */
+  min-height: 100vh;
+  text-align: left;
+  padding: 0 4rem;
+}
+
+.pheading{
+
+  font-size: 3rem;
+  font-weight: 800;
+  font-family: "Poppins", sans-serif;
+}
+
+@media only screen and (max-width: 800px){
+  .projects {
+       
+        padding: 0 2rem;
+    }
+  }
+
+  .pcontent{
+    width:100%;
+    height:auto;
+    display: flex;
+    justify-content:space-around;
+    flex-wrap: wrap;
+    /* align-items: center; */
+  }
+
+  @media only screen and (max-width: 800px){
+    .pcontent {
+         
+          justify-content: center;
+      }
+    }
+
+.card{
+  height:27em;
+  width:25em ;
+  margin-top:4em;
+  border-radius: 2em;
+  position: relative;
+  display: flex;
+  align-items: flex-end;
+  overflow: hidden;
+}
+
+
+
+.card:nth-child(1){
+  background: url("./images/Tenzies.JPG");
+  background-size:cover;
+  background-position: center;
+  box-shadow: 0 10px 25px rgb(243 99 147 / 40%);
+  transition: 0.3s ease;
+
+
+}
+
+.card:nth-child(1):hover{
+ 
+  transform: scale(1.01) translateY(-10px);
+  box-shadow: 0 15px 30px rgb(243 99 147 / 50%);
+}
+
+.card:nth-child(2){
+  background: url("./images/Meme2.JPG");
+  background-size:cover;
+  background-position: center;
+  box-shadow: 0 10px 25px rgb(255 200 72 / 40%);
+  transition: 0.3s ease;
+
+
+}
+
+.card:nth-child(2):hover{
+ 
+  transform: scale(1.01) translateY(-10px);
+  box-shadow: 0 15px 30px rgb(255 200 72 / 50%);
+}
+
+.card:nth-child(3){
+  background: url("./images/quiz.JPG");
+  background-size:cover;
+  background-position: center;
+  box-shadow: 0 10px 25px rgb(56 163 165 / 40%);
+  transition: 0.3s ease;
+
+
+}
+
+.card:nth-child(3):hover{
+ 
+  transform: scale(1.01) translateY(-10px);
+  box-shadow: 0 15px 30px rgb(56 163 165 / 50%);
+}
+
+.card:nth-child(4){
+  background: url("./images/airbnb.JPG");
+  background-size:cover;
+  background-position: center;
+  box-shadow: 0 10px 25px rgb(243 99 147 / 40%);
+  transition: 0.3s ease;
+
+
+}
+
+.card:nth-child(4):hover{
+ 
+  transform: scale(1.01) translateY(-10px);
+  box-shadow: 0 15px 30px rgb(243 99 147 / 50%);
+}
+
+
+.card:nth-child(5){
+  background: url("./images/Todo.JPG");
+  background-size:cover;
+  background-position: center;
+  box-shadow: 0 10px 25px rgba(255, 200, 72, 0.774);
+  transition: 0.3s ease;
+
+
+}
+
+.card:nth-child(5):hover{
+ 
+  transform: scale(1.01) translateY(-10px);
+  box-shadow: 0 15px 30px rgb(255 200 72 / 50%);
+}
+
+
+
+.card_content{
+  width:100%;
+  height:50%;
+  padding: 1rem 1rem;
+  color:color;
+  border-top-left-radius: 2em;
+  border-top-right-radius: 2em;
+  transition: 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  font-family: "Poppins", sans-serif;
+  transform : translateY(5em);
+}
+
+.card_content:hover{
+  transform: translateY(0rem);
+}
+
+.bgpink{
+    background-color: #ff85a2;
+}
+
+.bgyellow{
+  background-color:#ffd166;
+}
+
+.bgblue{
+  background-color: #38a3a5;
+}
+
+.ctitle{
+  font-size: 1.6rem;
+  font-weight: 600;
+  color: white;
+  
+}
+
+
+/* --------------------------------------------------Footer-------------------------------------------------------- */
+
+.footer{
+  height: 65vh;
+  background-color: #38a3a5;
+  clip-path: polygon(0% 0%, 100% 15%, 100% 100%, 0% 100%);
+  padding: 0rem 4em;
+  padding-top: 5em;
+  margin-top: 5em;
+  text-align: left;
+}
+
+
+@media only screen and (max-width: 800px){
+  .footer {
+       
+        padding: 0rem 2em;
+        padding-top: 5em;
+    }
+  }
+
+
+
+.fheading{
+  font-size: 3rem;
+  font-weight: bold;
+  color: white;
+}
+
+.footer_content{
+  display: flex;
+}
+
+.fform{
+  color: white;
+}
+
+.fname{
+    width: 20em;
+    height: 1em;
+    padding: 10px;
+    font-size: 1.2rem;
+    outline: none;
+    color: white;
+    background: transparent;
+    border: 3px solid rgba(254, 254, 255, 0.9);
+}
+
+
+.fnamediv{
+  margin-top: 1em;
+}
+
+::placeholder{
+  color: white;
+  opacity: 1;
+}
+
+.ftext{
+    width: 30em;
+    height: 12em;
+    padding: 10px;
+    font-size: 1.2rem;
+    border: 3px solid rgba(254, 254, 255, 0.9);
+    background: transparent;
+    color: #fefeff;
+    outline: none;
+}
+
+@media only screen and (max-width: 800px){
+  .ftext {
+       
+        width: 100%;
+    }
+  }
+
+
+  @media only screen and (max-width: 800px){
+    .fname {
+         
+          width: 100%;
+      }
+    }
+
+
+.fboard{
+  width:50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+
+}
+
+@media only screen and (max-width: 1100px){
+  .fboard {
+       
+        display: none;
+    }
+}
+
+.board{
+    width: 15em;
+    height: 8em;
+    background-color: #ffab73;
+    border-radius: 20px;
+    color: #fefeff;
+    padding: 2em;
+    font-size: 1.5rem;
+    
+    display: flex;
+   
+    justify-content: center;
+    
+    flex-direction: column;
+    
+    align-items: center;
+    font-family: "Montserrat", sans-serif;
+    
+    box-shadow: 0 10px 20px rgb(17 17 17 / 15%);
+    margin: 0px;
+    
+}
+
+.board blockquote {
+  text-align: center;
+  font-style: italic;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  
+  background: linear-gradient(to bottom,  #ffd166 0%, #ffd166 33.33%, #38a3a5 33.33%, #38a3a5 66.66%, #ef476f 66.66%, #ef476f 100%);
+  border-radius: 10px;
+}
+
+.nav-social{
+  position: relative;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  top:60%;
+
+}
+
